package pl.mobilespot.futuremirror.testing

object CommonTags {
    const val NAMES_COUNTER = "NamesCounterTag"
    const val SEARCH_NAME = "SearchNameTag"
}
