...
            }
        }
    }

    private fun insertPLNames(provider: NameDayDao) {
        val data = listOf(
            NameDay(name = "Bogdan", day = 3, month = 3),
            NameDay(name = "Zenek", day = 4, month = 3)
        )
        data.forEach { nameDay ->
            provider.insert(nameDay)
        }
    }
...
